--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,11 @@
             <artifactId>thymeleaf-spring5</artifactId>
             <version>${org.thymeleaf}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+        </dependency>
 
     </dependencies>
 
